--- a/src/Header.css
+++ b/src/Header.css
@@ -1,18 +1,29 @@
 .header {
+    position: fixed;
     background-color: #FFFFFF;
     color: #000000;
     padding: 1rem;
     display: flex;
+    top: 0;
+    width: 100%;
+    height: 88px;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    font-size: 24px;
 }
 
-.nav-links {
-    display: flex;
+a {
+    text-decoration: none;
+    color: #000000;
 }
 
-.nav-links li {
+.nav-list {
     display: flex;
+    margin-right: 1rem;
+}
+
+.nav-item {
+    margin-left: 20px;
     list-style: none;
 }
