--- a/src/Components/btn.css
+++ b/src/Components/btn.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     background: #FFFFFF;
     padding-top: 4px;
     padding-bottom: 4px;
@@ -12,9 +13,22 @@
     width: fit-content;
 }
 
+.btn-container a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .btn-img {
     width: 24px;
     height: 24px;
     margin-right: 8px;
     fill: #000000;
+}
+
+.btn-text {
+    margin: 0;
+    color: #000000;
 }
