--- a/src/App.css
+++ b/src/App.css
@@ -1,241 +1,42 @@
-html {
-  scroll-behavior: smooth;
-  scroll-padding-top: 100px;
-}
-
 #root {
+  max-width: 1280px;
   margin: 0 auto;
-  text-align: center;
-  margin-top: 8rem;
-}
-
-.Profile-title {
-  font-size: 2.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  font-weight: 600;
-  position: relative;
-}
-
-.Profile-title::after {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 5px;
-  transform: translateX(-50%);
-  background-color: white;
-  bottom: 0;
-  left: 50%;
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 0 2rem;
-}
-
-.Profile {
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-  align-items: center;
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-  }
-}
-
-.Profile-image {
-  width: 250px;
-  height: 250px;
-  border-radius: 40%;
-  margin: 2rem;
-  flex-shrink: 0;
-}
-
-.Profile-Text {
-  flex-direction: column;
-  margin: 2rem;
-  font-size: 18px;
-}
-
-.App-list {
   padding: 2rem;
-}
-
-.github {
-  color: #000;
-  text-decoration: none;
-  font-size: 1.2rem;
-  font-weight: bold;
-}
-
-.test {
   text-align: center;
-  display: flex;
-  justify-content: center;
 }
 
-.btn-child {
-  padding: 8px 16px;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.Academic-Career {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin-top: 2rem;
-
-  @media (max-width: 768px) {
-    align-items: center;
-    flex-direction: column;
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
 
-.Academic {
-  width: auto;
-  max-width: 600px;
-  height: auto;
-  max-height: 600px;
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
 }
 
-.Career {
-  width: auto;
-  max-width: 600px;
-  height: auto;
-  max-height: 600px;
+.card {
+  padding: 2em;
 }
 
-.Academic-list {
-  padding-left: 0px;
-  width: auto;
-  min-width: 300px;
-  max-width: 600px;
-}
-
-.Academic-title {
-  font-size: 2.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  font-weight: 600;
-  position: relative;
-}
-
-.Academic-title::after {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 5px;
-  transform: translateX(-50%);
-  background-color: white;
-  bottom: 0;
-  left: 50%;
-}
-
-.Academic-item {
-  text-align: left;
-  list-style: none;
-}
-
-.Academic-text {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 25px;
-  font-size: 18px;
-  color: #fff;
-}
-
-.Academic-time {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size : 16px;
-  color: #ffd700;
-}
-
-.Academic-time::before {
-  content: '';
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-  background-color: #fff;
-  border-radius: 50%;
-  position: relative;
-  margin-right: 5px;
-}
-
-.Career-list {
-  padding-left: 0px;
-  width: auto;
-  min-width: 300px;
-  max-width: 600px;
-}
-
-.Career-title {
-  font-size: 2.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  font-weight: 600;
-  position: relative;
-}
-
-.Career-title::after {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 5px;
-  transform: translateX(-50%);
-  background-color: white;
-  bottom: 0;
-  left: 50%;
-}
-
-.Career-item {
-  text-align: left;
-  list-style: none;
-}
-
-.Career-text {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 25px;
-  font-size: 18px;
-  color: #fff;
-}
-
-.Career-time {
-  margin-top: 0;
-  margin-bottom: 0;
-  font-size : 16px;
-  color: #ffd700;
-}
-
-.Career-time::before {
-  content: '';
-  width: 10px;
-  height: 10px;
-  display: inline-block;
-  background-color: #fff;
-  border-radius: 50%;
-  position: relative;
-  margin-right: 5px;
-}
-
-.Skill-title {
-  font-size: 2.5rem;
-  text-align: center;
-  padding-bottom: 1rem;
-  font-weight: 600;
-  position: relative;
-}
-
-.Skill-title::after {
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 5px;
-  transform: translateX(-50%);
-  background-color: white;
-  bottom: 0;
-  left: 50%;
+.read-the-docs {
+  color: #888;
 }
