--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.Title {
+  font-size: 48px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Profile {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  align-items: center;
+  font-size: 18px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.Profile-Text {
+  flex-direction: column;
+  max-width: 400px;
+  margin: 20px;
 }
 
-.card {
-  padding: 2em;
+.Name {
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
-.read-the-docs {
-  color: #888;
+.Avatar {
+  width: 200px;
+  height: 200px;
+  border-radius: 35%;
+  object-fit: cover;
 }
